docs/sf-export/sfdx-raw/objects/LegacyCRMNote__c/LegacyCRMNote__c.object-meta.xml
<CustomObject>
    <label>Legacy CRM Note</label>
    <nameField>
        <displayFormat>CRMNote-{0000}</displayFormat>
        <label>LegacyCRMNote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legacy CRM Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>