docs/sf-export/sfdx-raw/objects/LegacyCRMNote__c/fields/Converted_to_Activity__c.field-meta.xml
<CustomField>
    <fullName>Converted_to_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted to Activity</label>
    <type>Checkbox</type>
</CustomField>