docs/sf-export/sfdx-raw/objects/LegacyCRMNote__c/fields/Disp_Id__c.field-meta.xml
<CustomField>
    <fullName>Disp_Id__c</fullName>
    <label>Disp Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>