docs/sf-export/sfdx-raw/objects/LegacyCRMNote__c/fields/Dispo__c.field-meta.xml
<CustomField>
    <fullName>Dispo__c</fullName>
    <label>Dispo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>