docs/sf-export/sfdx-raw/objects/LegacyCRMNote__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>Note</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>