docs/sf-export/sfdx-raw/objects/LegacyCRMNote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Disp_Id__c</columns>
    <columns>Deal_Id__c</columns>
    <columns>Dispo__c</columns>
    <columns>User__c</columns>
    <columns>Date__c</columns>
    <columns>Time__c</columns>
    <columns>Note__c</columns>
    <columns>Converted_to_Activity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>